add support for filtering fixtures by start date
